✨ feat(config): 严格模式-当匹配到部分内容时即跳过翻译

--- a/.env.exa
+++ b/.env.exa
@@ -10,3 +10,8 @@ TRANS_PROVIDER=google
 TRANS_MODEL=
 OPENAI_API_KEY=
 OPENAI_BASE_URL=
+
+DISABLE_TEMPERATURE_FOR_OPENAI=false
+STRICT_FILTER_TYPES=
+SKIP_SOURCE_LANGS=
+SKIP_TARGET_LANGS=
