--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "sqlalchemy>=2.0.41",
     "tenacity>=9.1.2",
     "tgcrypto>=1.2.5",
+    "uvloop>=0.22.1 ; sys_platform != 'win32'",
+    "winloop>=0.3.1 ; sys_platform == 'win32'",
 ]
